[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/Joystick/knob.png" type="Texture" id=2]
[ext_resource path="res://GUI/Joystick/back.png" type="Texture" id=3]
[ext_resource path="res://GUI/Joystick/Joystick.gd" type="Script" id=4]
[ext_resource path="res://GUI/Joystick/JoystickKnob.gd" type="Script" id=5]
[ext_resource path="res://EnemySpawner/EnemySpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://LevelManager/LevelManager.gd" type="Script" id=7]
[ext_resource path="res://GUI/Heading1.tres" type="DynamicFont" id=8]
[ext_resource path="res://GUI/Heading2.tres" type="DynamicFont" id=9]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=10]
[ext_resource path="res://GUI/PlayerHealthBar/healthbarfront.png" type="Texture" id=11]
[ext_resource path="res://GUI/PlayerHealthBar/healthbarback.png" type="Texture" id=12]
[ext_resource path="res://Loot/Crystal.png" type="Texture" id=13]
[ext_resource path="res://GUI/PlayerExpBar/ExpBarBack.png" type="Texture" id=14]
[ext_resource path="res://GUI/PlayerExpBar/ExpBarFront.png" type="Texture" id=15]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="Level" type="Spatial"]

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -3.24301, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Floor"]
cast_shadow = 0
mesh = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -3.89697e-08, 0.970972, -0.239194, 1.58191e-07, 0.239194, 0.970972, 1, 1.49214e-13, -1.6292e-07, -7.022, 37, -0.081 )
fov = 96.0

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.945487, 0.0636667, 0.319377, -0.197554, -0.667519, 0.717908, 0.258897, -0.741866, -0.618552, 4.92451, 9.0293, -4.38018 )
shadow_enabled = true

[node name="Joystick" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="JoystickKnob" type="TouchScreenButton" parent="Joystick"]
position = Vector2( -386.135, -371.023 )
normal = ExtResource( 2 )
shape = SubResource( 3 )
script = ExtResource( 5 )

[node name="EnemySpawner" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.9033, -0.774463, 14.0175 )

[node name="EnemySpawner2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.04207, -16.5706 )

[node name="EnemySpawner3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6797, -0.634198, 11.0169 )

[node name="LevelManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="GUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
rect_scale = Vector2( 0.997749, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveCounter" type="Label" parent="GUI"]
margin_right = 543.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 8 )
text = "WAVE 2/3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZombiesLeft" type="Label" parent="GUI"]
margin_top = 61.0
margin_right = 543.0
margin_bottom = 810.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 9 )
text = "ZOMBIES LEFT"
align = 1

[node name="LootDisplay" type="MarginContainer" parent="GUI"]
margin_top = 814.0
margin_right = 543.0
margin_bottom = 879.0

[node name="LootContainer" type="HBoxContainer" parent="GUI/LootDisplay"]
margin_right = 543.0
margin_bottom = 65.0

[node name="CrystalDisplay" type="CenterContainer" parent="GUI/LootDisplay/LootContainer"]
margin_right = 40.0
margin_bottom = 65.0

[node name="CrystalImage" type="TextureRect" parent="GUI/LootDisplay/LootContainer/CrystalDisplay"]
margin_top = 12.0
margin_right = 40.0
margin_bottom = 52.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 13 )
expand = true

[node name="CrystalCount" type="Label" parent="GUI/LootDisplay/LootContainer"]
margin_left = 44.0
margin_top = 4.0
margin_right = 89.0
margin_bottom = 61.0
rect_min_size = Vector2( 45, 0 )
custom_fonts/font = ExtResource( 8 )
text = "x0"

[node name="PlayerExpBar" type="TextureProgress" parent="GUI/LootDisplay/LootContainer"]
margin_left = 93.0
margin_right = 543.0
margin_bottom = 65.0
max_value = 6.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )

[node name="PlayerHealthBarContainer" type="CenterContainer" parent="GUI"]
margin_top = 883.0
margin_right = 543.0
margin_bottom = 960.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthBar" type="TextureProgress" parent="GUI/PlayerHealthBarContainer"]
margin_left = 3.0
margin_right = 539.0
margin_bottom = 77.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GUI/PlayerHealthBarContainer"]
margin_left = 242.0
margin_top = 18.0
margin_right = 301.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthPoints" type="Label" parent="GUI/PlayerHealthBarContainer/CenterContainer"]
margin_right = 59.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 9 )
text = "50/100"
__meta__ = {
"_edit_use_anchors_": false
}
